--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@fortawesome/angular-fontawesome": "^0.10.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@types/select2": "^4.0.54",
+    "bootstrap": "^5.1.3",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
+    "select2": "^4.1.0-rc.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
