--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.2.12",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/google-maps": "^13.0.2",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
@@ -25,8 +27,14 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@popperjs/core": "^2.10.2",
     "@types/select2": "^4.0.54",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.3",
+    "googlemaps": "^1.12.0",
+    "jquery": "^3.6.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
     "select2": "^4.1.0-rc.0",
@@ -37,6 +45,7 @@
     "@angular-devkit/build-angular": "~0.1102.11",
     "@angular/cli": "~11.2.11",
     "@angular/compiler-cli": "~11.2.12",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
